--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@ div {
 </style>
 </head>
 <body>
+<label for="clock_div">currentTime:</label>
 <div id="clock_div"></div>
-<!-- <script src="js/my_clock.js"></script> -->
 </body>
 </html>
