--- a/background.html
+++ b/background.html
@@ -1,2 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+</head>
+<body>
+
+</body>
+</html>
 <script src="https://cdn1.lncld.net/static/js/av-min-1.2.1.js"></script>
 <script type="text/javascript" src="js/background.js"></script>
