--- a/background.html
+++ b/background.html
@@ -9,5 +9,5 @@
 
 </body>
 </html>
-<script src="https://cdn1.lncld.net/static/js/av-min-1.2.1.js"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/background.js"></script>
